example/tests/build-fail/fail-3/src/mod_2/mod.rs
fn func2() -> NonExistingType {
    0
}
//~^^^ ERROR E0433

// ~  NOTE With extra space
// ~| HELP For previous line
